[gd_scene load_steps=13 format=3 uid="uid://bks7sl4a6hps7"]

[ext_resource type="Script" path="res://scripts/fishing_scene.gd" id="1_glkog"]
[ext_resource type="PackedScene" uid="uid://dtp1ripklrxuw" path="res://scenes/player_main.tscn" id="1_x3ft2"]
[ext_resource type="Shader" path="res://scripts/main.gdshader" id="2_pn2nr"]
[ext_resource type="Theme" uid="uid://da85jwfdn14or" path="res://fonts/new_theme.tres" id="3_echlo"]
[ext_resource type="Texture2D" uid="uid://bjjs6c6wkawxd" path="res://textures/turbine_base_sharpened.png" id="4_j86fn"]
[ext_resource type="Texture2D" uid="uid://ojj4aaci66vp" path="res://textures/tileset_sea.png" id="5_ypep3"]
[ext_resource type="Texture2D" uid="uid://c2swufnfs3v5b" path="res://textures/boat.png" id="6_wqdii"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_mvgga"]
shader = ExtResource("2_pn2nr")
shader_parameter/noise_opacity = 0.286
shader_parameter/noise_speed = 0.01

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_3th4b"]
texture = ExtResource("5_ypep3")
texture_region_size = Vector2i(128, 128)
2:1/size_in_atlas = Vector2i(2, 1)
2:1/0 = 0
0:0/size_in_atlas = Vector2i(2, 2)
0:0/0 = 0

[sub_resource type="TileSet" id="TileSet_jyb28"]
sources/0 = SubResource("TileSetAtlasSource_3th4b")

[sub_resource type="RectangleShape2D" id="RectangleShape2D_hwnkd"]
size = Vector2(51, 72)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_ee6wq"]
size = Vector2(85, 141)

[node name="fishing_scene" type="Node2D"]
script = ExtResource("1_glkog")

[node name="Player" parent="." instance=ExtResource("1_x3ft2")]
position = Vector2(971, 1474)
scale = Vector2(0.71464, 0.71464)

[node name="Camera2D" type="Camera2D" parent="Player"]
position = Vector2(0, -19)
scale = Vector2(0.869865, 0.869865)
position_smoothing_enabled = true
position_smoothing_speed = 10.0

[node name="CanvasLayer" type="CanvasLayer" parent="Player/Camera2D"]

[node name="ColorRect" type="ColorRect" parent="Player/Camera2D/CanvasLayer"]
material = SubResource("ShaderMaterial_mvgga")
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2

[node name="RichTextLabel" type="RichTextLabel" parent="Player/Camera2D"]
z_index = 9
offset_left = -1174.0
offset_top = 533.0
offset_right = 1197.0
offset_bottom = 645.0
theme = ExtResource("3_echlo")
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_constants/shadow_outline_size = 8
theme_override_font_sizes/normal_font_size = 49
bbcode_enabled = true

[node name="turbine_base" type="Sprite2D" parent="."]
z_index = -3
position = Vector2(1186, 1088)
scale = Vector2(0.907629, 0.907629)
texture = ExtResource("4_j86fn")

[node name="sea" type="TileMap" parent="."]
z_index = 2
position = Vector2(881, 1587)
scale = Vector2(0.522132, 0.522132)
tile_set = SubResource("TileSet_jyb28")
rendering_quadrant_size = 128
format = 2
layer_0/tile_data = PackedInt32Array(131078, 131072, 1, 131094, 131072, 1, 131110, 131072, 1, 131126, 131072, 1, 196598, 131072, 1, 196582, 131072, 1, 131142, 131072, 1, 196566, 131072, 1, 196550, 131072, 1, 196534, 131072, 1, 196518, 131072, 1, 196502, 131072, 1, 196486, 131072, 1, 196470, 131072, 1, 131158, 131072, 1, 131174, 131072, 1, 131190, 131072, 1, 131206, 131072, 1, 131222, 131072, 1, 982902, 0, 0, 982918, 0, 0, 982934, 0, 0, 982950, 0, 0, 982966, 0, 0, 917654, 0, 0, 917638, 0, 0, 917622, 0, 0, 917606, 0, 0, 917590, 0, 0, 917574, 0, 0, 917558, 0, 0, 917542, 0, 0, 917526, 0, 0, 917510, 0, 0, 982982, 0, 0, 982998, 0, 0, 983014, 0, 0, 983030, 0, 0, 2031478, 0, 0, 2031494, 0, 0, 2031510, 0, 0, 2031526, 0, 0, 2031542, 0, 0, 2031558, 0, 0, 2031574, 0, 0, 2031590, 0, 0, 2031606, 0, 0, 1966086, 0, 0, 1966102, 0, 0, 1966118, 0, 0, 1966134, 0, 0, 1966150, 0, 0, 1966166, 0, 0, 1966182, 0, 0, 1966198, 0, 0, 1966214, 0, 0, 1966230, 0, 0, 3080054, 0, 0, 3080070, 0, 0, 3080086, 0, 0, 3080102, 0, 0, 3080118, 0, 0, 3080134, 0, 0, 3080150, 0, 0, 3080166, 0, 0, 3080182, 0, 0, 3014662, 0, 0, 3014678, 0, 0, 3014694, 0, 0, 3014710, 0, 0, 3014726, 0, 0, 3014742, 0, 0, 3014758, 0, 0, 3014774, 0, 0, 3014790, 0, 0, 3014806, 0, 0)

[node name="boat" type="StaticBody2D" parent="."]
z_index = -1
position = Vector2(980, 1580)
collision_layer = 3
collision_mask = 3

[node name="Sprite2D" type="Sprite2D" parent="boat"]
position = Vector2(-101, 10)
rotation = 0.0208093
scale = Vector2(0.738641, 0.738641)
texture = ExtResource("6_wqdii")

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="boat"]
polygon = PackedVector2Array(-280, 0, -282, -286, -340, -289, -348, 40, 102, 44, 106, -287, 57, -290, 57.8738, -36.5961, 11, -2)

[node name="interactables" type="Node2D" parent="."]

[node name="fishing" type="Area2D" parent="interactables"]
collision_layer = 2
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="interactables/fishing"]
position = Vector2(714.5, 1554)
shape = SubResource("RectangleShape2D_hwnkd")

[node name="fishingButton" type="Button" parent="interactables/fishing"]
offset_left = 558.0
offset_top = 1532.0
offset_right = 685.0
offset_bottom = 1572.0
theme = ExtResource("3_echlo")
text = "fishing"

[node name="return" type="Area2D" parent="interactables"]
collision_layer = 2
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="interactables/return"]
position = Vector2(1002.5, 1513.5)
shape = SubResource("RectangleShape2D_ee6wq")

[node name="upButton" type="Button" parent="interactables/return"]
offset_left = 903.0
offset_top = 1373.0
offset_right = 1047.0
offset_bottom = 1413.0
theme = ExtResource("3_echlo")
text = "climb up"

[connection signal="body_entered" from="interactables/fishing" to="." method="_on_fishing_body_entered"]
[connection signal="body_exited" from="interactables/fishing" to="." method="_on_fishing_body_exited"]
[connection signal="pressed" from="interactables/fishing/fishingButton" to="." method="_on_button_pressed"]
[connection signal="body_entered" from="interactables/return" to="." method="_on_return_body_entered"]
[connection signal="body_exited" from="interactables/return" to="." method="_on_return_body_exited"]
[connection signal="pressed" from="interactables/return/upButton" to="." method="_on_up_button_pressed"]
